// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart snapShot testing renders PieChart correctly 1`] = `
<div
  className=
      ms-PieChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 670px;
      }
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone0"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={350}
      role="application"
      width={600}
    >
      <g
        transform="translate(300, 175)"
      >
        <g
          aria-label="A-50"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__2"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #e81123;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M0,-159A159,159,0,1,1,0,159L0,0Z"
          />
          <text
            aria-label="A-50"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="hanging"
            id="tooltip-host3"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="start"
            x={161}
            y={3.574918139293004e-14}
          >
            A-50
          </text>
        </g>
        <g
          aria-label="B-25"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__5"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #0078d4;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M0,159A159,159,0,0,1,-159,0L0,0Z"
          />
          <text
            aria-label="B-25"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="hanging"
            id="tooltip-host6"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="end"
            x={-113.84419177103425}
            y={113.84419177103408}
          >
            B-25
          </text>
        </g>
        <g
          aria-label="C-25"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__8"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #107c10;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M-159,0A159,159,0,0,1,0,-159L0,0Z"
          />
          <text
            aria-label="C-25"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="auto"
            id="tooltip-host9"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="end"
            x={-113.84419177103408}
            y={-113.84419177103425}
          >
            C-25
          </text>
        </g>
        <use
          xlinkHref="#"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`PieChart snapShot testing renders with colors, width and height data correctly 1`] = `
<div
  className=
      ms-PieChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 670px;
      }
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone10"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={300}
      role="application"
      width={600}
    >
      <g
        transform="translate(300, 150)"
      >
        <g
          aria-label="A-50"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__12"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #e81123;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M0,-134A134,134,0,1,1,0,134L0,0Z"
          />
          <text
            aria-label="A-50"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="hanging"
            id="tooltip-host13"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="start"
            x={136}
            y={3.019806626980426e-14}
          >
            A-50
          </text>
        </g>
        <g
          aria-label="B-25"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__15"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #0078d4;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M0,134A134,134,0,0,1,-134,0L0,0Z"
          />
          <text
            aria-label="B-25"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="hanging"
            id="tooltip-host16"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="end"
            x={-96.16652224137054}
            y={96.16652224137039}
          >
            B-25
          </text>
        </g>
        <g
          aria-label="C-25"
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="id__18"
          onBlur={[Function]}
          onFocus={[Function]}
          role="img"
        >
          <path
            className=

                {
                  fill: #107c10;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M-134,0A134,134,0,0,1,0,-134L0,0Z"
          />
          <text
            aria-label="C-25"
            className=

                {
                  fill: #000000;
                  outline: none;
                }
            data-is-focusable={false}
            dominantBaseline="auto"
            id="tooltip-host19"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            textAnchor="end"
            x={-96.16652224137039}
            y={-96.16652224137054}
          >
            C-25
          </text>
        </g>
        <use
          xlinkHref="#"
        />
      </g>
    </svg>
  </div>
</div>
`;
